--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+
 .MyBackground{
     background-image: url('https://www.kibrispdr.org/data/29/chill-wallpaper-hd-11.jpg');
     background-position: center;
@@ -8,6 +15,56 @@
     height:100vh;
     font-family: sans-serif;
     opacity: 99%;
+}
+
+.content1{
+    max-width: 1100px;
+    padding: 0 2rem;
+    margin: auto;
+    overflow: auto;
+}
+
+.content1 h2{
+    font-family: Cambria;
+    font-size: 40px;
+    margin-left: 0;
+    text-align: center;
+}
+
+.content1 h2 span{
+    color: olive;
+}
+
+.content1 img{
+    width: 100%;
+
+}
+
+.card{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2rem;
+    background-color: #f1f1f1;
+    position:relative;
+    margin-bottom: 2rem;
+    padding: 2rem;
+}
+
+.card h2{
+    margin-bottom: 2rem;
+}
+
+.card img{
+    height: 300px;
+}
+
+.card:nth-child(even) img{
+    order: 2;
+}
+
+.line{
+    height: 2px;
+    background-color: black;
 }
 
 .logo h1{
@@ -69,6 +126,7 @@
     background-color: #333;
     opacity: 0.6;
     height:800px;
+    width:2040px;
     border-right: 2px solid white;
 
 }
@@ -148,5 +206,136 @@
 }
 
 .info{
+    position: absolute;
     border-right: 1px solid white;
+    padding: -5px;
+    margin-top: 15px;
+    margin-left: 50px;
+    margin-bottom: 15px;
+}
+
+.register{
+    position: absolute;
+    margin-left: 400px;
+}
+
+.info:last-child{
+    border-right: none;
+}
+
+.info ul li input{
+    text-align: left;
+    font-family: Cambria;
+}
+
+.info ul li button{
+    width: 287px;
+    height: 30px;
+    font-size: 17px;
+    font-family: Cambria;
+}
+
+.location{
+    position: absolute;
+    margin-left: 1500px;
+}
+
+.location h4{
+    color: white;
+    font-family: Cambria;
+}
+
+.location iframe{
+    width: 250px;
+    height: 200px;
+    margin-left: 45px;
+    margin-top: 25px;
+}
+
+.end{
+    background-color: black;
+    height: 70px;
+}
+
+.end h4{
+    color: white;
+    font-size: 25px;
+    font-family: Cambria;
+    text-align: center;
+    margin-top: 25px;
+}
+
+.textcontainer
+{
+    display: flex;
+}
+
+.textcontainer .textbox{
+    margin: 20px;
+    padding: 20px;
+    background: #333;
+    opacity: 0.8;
+}
+
+.textcontainer .textbox h3{
+    color: white;
+    font-size: 30px;
+    font-family: Cambria;
+    text-align: center;
+}
+
+.textcontainer .textbox p{
+    color: white;
+    font-size: 15px;
+    font-family: Cambria;
+    text-align: justify;
+    line-height: 1cm;
+}
+
+.textcontainer .textbox a{
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    font-family: Cambria;
+    text-align: justify;
+    line-height: 1cm;
+}
+
+.reveal{
+    position: relative;
+    transform: translateY(150px);
+    opacity: 0;
+    transition: 2s all ease;
+}
+
+.reveal.active
+{
+    transform: translateY(0);
+    opacity: 1;
+}
+
+@media (max-width: 200px) {
+    .textcontainer{
+        flex-direction: column;
+    }
+    .card{
+        display: block;
+    }
+}
+
+@media (prefers-reduced-motion: no-preference){
+.info ul li button:hover{
+    animation: wide-the-size 1s 1;
+    background-color:gray;
+    border: 1px solid gray;
+}
+}
+
+@keyframes wide-the-size{
+    0%{
+        transform: scale(1);
+    }
+    50%{
+        transform: scale(1.1);
+    }
 }
